--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "about/Routes": ["apps/about/src/app/remote-entry/entry.routes.ts"],
       "shop/Routes": ["apps/shop/src/app/remote-entry/entry.routes.ts"]
     }
   },
