update app component

--- a/nx.json
+++ b/nx.json
@@ -62,6 +62,9 @@
       "linter": "eslint",
       "style": "css",
       "unitTestRunner": "jest"
+    },
+    "@nx/angular:component": {
+      "style": "css"
     }
   }
 }
