--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -5,6 +5,7 @@
   "prefix": "app",
   "sourceRoot": "apps/shell/src",
   "tags": [],
+  "implicitDependencies": ["shop", "about"],
   "targets": {
     "build": {
       "executor": "@nx/angular:webpack-browser",
